import com.github.ajalt.clikt.core.CliktCommand

class Cli : CliktCommand(help = "CLI for custom language operations") {
    override fun run() = Unit
}
